--- a/_variables.yml
+++ b/_variables.yml
@@ -3,7 +3,7 @@ author: Matthias Schnetzer
 instructor:
   name: Dr. Matthias Schnetzer
   name-wo-title: Matthias Schnetzer
-  employer: "Arbeiterkammer Wien & WU Vienna"
+  employer: "Arbeiterkammer Wien & WU Wien"
   email: matthias.schnetzer@akwien.at
   url: "https://mschnetzer.github.io"
   twitter: matschnetzer
